--- a/Cordinator/build.xml
+++ b/Cordinator/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Coordinator" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Coordinator.</description>
+<project name="Cordinator" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Cordinator.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -59,7 +59,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="Coordinator-impl.jar">
+        <target name="run" depends="Cordinator-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
