--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /GridReceptor/build/
 /Modelo/build/
 /Cordinator/build/
+/Escuchar/nbproject/private/
+/Resultado/nbproject/private/
+/Escuchar/build/
+/Resultado/build/
