--- a/Distribuidor/nbproject/project.properties
+++ b/Distribuidor/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Resultado
+application.title=Distribuidor
 application.vendor=Juan
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -23,15 +23,15 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Resultado.jar
+dist.jar=${dist.dir}/Distribuidor.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.activemq-all-5.5.1.jar=..\\jars\\activemq-all-5.5.1.jar
-file.reference.log4j-1.2.14.jar=..\\jars\\log4j-1.2.14.jar
+file.reference.activemq-all-5.5.1.jar=../jars/activemq-all-5.5.1.jar
+file.reference.log4j-1.2.14.jar=../jars/log4j-1.2.14.jar
 file.reference.Resultado-src=src
-file.reference.slf4j-api-1.5.11.jar=..\\jars\\slf4j-api-1.5.11.jar
-file.reference.slf4j-log4j12-1.5.11.jar=..\\jars\\slf4j-log4j12-1.5.11.jar
+file.reference.slf4j-api-1.5.11.jar=../jars/slf4j-api-1.5.11.jar
+file.reference.slf4j-log4j12-1.5.11.jar=../jars/slf4j-log4j12-1.5.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -62,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Resultado.Resultado
+main.class=Distribuidor.Distribuidor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
