--- a/Modelo/nbproject/project.properties
+++ b/Modelo/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Modelo
-application.vendor=Juan
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -15,6 +14,7 @@ build.generated.sources.dir=${build.dir}/generated-sources
 build.sysclasspath=ignore
 build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
+buildfile=nbbuild.xml
 # Uncomment to specify the preferred debugger connection transport:
 #debug.transport=dt_socket
 debug.classpath=\
@@ -25,13 +25,12 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/Modelo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
-file.reference.activemq-all-5.5.1.jar=..\\jars\\activemq-all-5.5.1.jar
-file.reference.log4j-1.2.14.jar=..\\jars\\log4j-1.2.14.jar
+file.reference.activemq-all-5.5.1.jar=C:\\Users\\Juanes\\Desktop\\jvelezpo-PracticaFinalTeleII-d16938c724d0574e381a4ca97766a5b701d44419\\jars\\activemq-all-5.5.1.jar
+file.reference.log4j-1.2.14.jar=C:\\Users\\Juanes\\Desktop\\jvelezpo-PracticaFinalTeleII-d16938c724d0574e381a4ca97766a5b701d44419\\jars\\log4j-1.2.14.jar
 file.reference.Modelo-src=src
-file.reference.slf4j-api-1.5.11.jar=..\\jars\\slf4j-api-1.5.11.jar
-file.reference.slf4j-log4j12-1.5.11.jar=..\\jars\\slf4j-log4j12-1.5.11.jar
+file.reference.slf4j-api-1.5.11.jar=C:\\Users\\Juanes\\Desktop\\jvelezpo-PracticaFinalTeleII-d16938c724d0574e381a4ca97766a5b701d44419\\jars\\slf4j-api-1.5.11.jar
+file.reference.slf4j-log4j12-1.5.11.jar=C:\\Users\\Juanes\\Desktop\\jvelezpo-PracticaFinalTeleII-d16938c724d0574e381a4ca97766a5b701d44419\\jars\\slf4j-log4j12-1.5.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -44,8 +43,8 @@ javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -62,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Modelo.GridModel
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
